Changed the gitignore Deleted(.dist) Added(.bin.obj .vs) .so that bootstrap will be pushed.

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -442,7 +442,7 @@
 
 
                 <div class="nk-image-slider-item">
-                    <img src="assets/images/slide-1.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-1-thumb.jpg">
+                    <img src="~/assets/images/slide-1.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-1-thumb.jpg">
 
                     <div class="nk-image-slider-content">
 
@@ -455,7 +455,7 @@
                 </div>
 
                 <div class="nk-image-slider-item">
-                    <img src="assets/images/slide-2.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-2-thumb.jpg">
+                    <img src="~assets/images/slide-2.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-2-thumb.jpg">
 
                     <div class="nk-image-slider-content">
 
@@ -468,12 +468,12 @@
                 </div>
 
                 <div class="nk-image-slider-item">
-                    <img src="assets/images/slide-3.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-3-thumb.jpg">
+                    <img src="~assets/images/slide-3.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-3-thumb.jpg">
 
                 </div>
 
                 <div class="nk-image-slider-item">
-                    <img src="assets/images/slide-4.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-4-thumb.jpg">
+                    <img src="~assets/images/slide-4.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-4-thumb.jpg">
 
                     <div class="nk-image-slider-content">
 
@@ -486,7 +486,7 @@
                 </div>
 
                 <div class="nk-image-slider-item">
-                    <img src="assets/images/slide-5.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-5-thumb.jpg">
+                    <img src="~assets/images/slide-5.jpg" alt="" class="nk-image-slider-img" data-thumb="assets/images/slide-5-thumb.jpg">
 
                     <div class="nk-image-slider-content">
 
@@ -2055,8 +2055,6 @@
     <script src="assets/js/goodgames.min.js"></script>
     <script src="assets/js/goodgames-init.js"></script>
     <!-- END: Scripts -->
-
-
 
 </body>
 </html>
