Added Store and Store Checkout files and linked them to the navbar.

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -341,7 +341,7 @@
                             </a><ul class="dropdown">
 
                                 <li>
-                                    <a href="store.html">
+                                    <a asp-action="Store">
                                         Store
 
                                     </a>
@@ -371,7 +371,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-cart.html">
+                                    <a asp-action="StoreCart">
                                         Cart
 
                                     </a>
