Added Cart and Store Product pages, as well as their link to the navbar.

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -347,7 +347,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-product.html">
+                                    <a asp-action="StoreProduct">
                                         Product
 
                                     </a>
@@ -365,7 +365,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-checkout.html">
+                                    <a asp-action="StoreCheckout">
                                         Checkout
 
                                     </a>
