--- a/FowlerSite/Views/Store/StoreCart.cshtml
+++ b/FowlerSite/Views/Store/StoreCart.cshtml
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="assets/vendor/ionicons/css/ionicons.min.css">
 
     <!-- Flickity -->
-    <link rel="stylesheet" href="assets/vendor/flickity/dist/flickity.min.css">
+    <link rel="stylesheet" href="@Url.Content("~/assets/vendor/flickity/dist/flickity.min.css")">
 
     <!-- Photoswipe -->
     <link rel="stylesheet" type="text/css" href="assets/vendor/photoswipe/dist/photoswipe.css">
