added a layout to the contact us page

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -230,9 +230,9 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li>
-                                    <a href="widgets.html">
-                                        Widgets
+                                <li class="active">
+                                    <a href="@Url.Action("ContactUs","Home")">
+                                        Contact Us
 
                                     </a>
                                 </li>
