--- a/FowlerSite/Views/Home/ContactUs.cshtml
+++ b/FowlerSite/Views/Home/ContactUs.cshtml
@@ -99,60 +99,7 @@
 
                     </ul>
                 </div>
-                <div class="nk-contacts-right">
-                    <ul class="nk-contacts-icons">
-                        <li>
-                            <a href="#" data-toggle="modal" data-target="#modalSearch">
-                                <span class="fa fa-search"></span>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="#" data-toggle="modal" data-target="#modalLogin">
-                                <span class="fa fa-user"></span>
-                            </a>
-                        </li>
-
-                        <li>
-                            <span class="nk-cart-toggle">
-                                <span class="fa fa-shopping-cart"></span>
-                                <span class="nk-badge">27</span>
-                            </span>
-                            <div class="nk-cart-dropdown">
-
-                                <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
-                                        <img src="assets/images/product-5-xs.jpg" alt="In all revolutions of">
-                                    </a>
-                                    <h3 class="nk-post-title">
-                                        <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a href="store-product.html">In all revolutions of</a>
-                                    </h3>
-                                    <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
-                                </div>
-
-                                <div class="nk-widget-post">
-                                    <a href="store-product.html" class="nk-post-image">
-                                        <img src="assets/images/product-7-xs.jpg" alt="With what mingled joy">
-                                    </a>
-                                    <h3 class="nk-post-title">
-                                        <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
-                                        <a href="store-product.html">With what mingled joy</a>
-                                    </h3>
-                                    <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
-                                </div>
-
-                                <div class="nk-gap-2"></div>
-                                <div class="text-center">
-                                    <a href="store-checkout.html" class="nk-btn nk-btn-rounded nk-btn-color-main-1 nk-btn-hover-color-white">Proceed to Checkout</a>
-                                </div>
-                            </div>
-                        </li>
-
-                    </ul>
-                </div>
+                
             </div>
         </div>
         <!-- END: Top Contacts -->
@@ -169,7 +116,7 @@
                 <div class="nk-nav-table">
 
                     <a href="index.html" class="nk-nav-logo">
-                        <img src="assets/images/logo.png" alt="GoodGames" width="199">
+                        <img src="~/assets/images/logo.png" alt="GoodGames" width="199">
                     </a>
 
                     <ul class="nk-nav nk-nav-right d-none d-lg-table-cell" data-nav-mobile="#nk-nav-mobile">
@@ -522,7 +469,7 @@
                                     <div class="col-lg-6">
                                         <div class="nk-widget-post-2">
                                             <a href="blog-article.html" class="nk-post-image">
-                                                <img src="assets/images/post-1-sm.jpg" alt="">
+                                                <img src="~/assets/images/post-1-sm.jpg" alt="">
                                             </a>
                                             <div class="nk-post-title"><a href="blog-article.html">Smell magic in the air. Or maybe barbecue</a></div>
                                             <div class="nk-post-date">
@@ -535,7 +482,7 @@
                                     <div class="col-lg-6">
                                         <div class="nk-widget-post-2">
                                             <a href="blog-article.html" class="nk-post-image">
-                                                <img src="assets/images/post-2-sm.jpg" alt="">
+                                                <img src="~/assets/images/post-2-sm.jpg" alt="">
                                             </a>
                                             <div class="nk-post-title"><a href="blog-article.html">Grab your sword and fight the Horde</a></div>
                                             <div class="nk-post-date">
@@ -613,8 +560,8 @@
 
     <!-- START: Page Background -->
 
-    <img class="nk-page-background-top" src="assets/images/bg-top.png" alt="">
-    <img class="nk-page-background-bottom" src="assets/images/bg-bottom.png" alt="">
+    <img class="nk-page-background-top" src="~/assets/images/bg-top.png" alt="">
+    <img class="nk-page-background-bottom" src="~/assets/images/bg-bottom.png" alt="">
 
     <!-- END: Page Background -->
     <!-- START: Search Modal -->
@@ -695,64 +642,64 @@
     <!-- END: Login Modal -->
     <!-- START: Scripts -->
     <!-- Object Fit Polyfill -->
-    <script src="assets/vendor/object-fit-images/dist/ofi.min.js"></script>
+    <script src="~/assets/vendor/object-fit-images/dist/ofi.min.js"></script>
 
     <!-- GSAP -->
-    <script src="assets/vendor/gsap/src/minified/TweenMax.min.js"></script>
-    <script src="assets/vendor/gsap/src/minified/plugins/ScrollToPlugin.min.js"></script>
+    <script src="~/assets/vendor/gsap/src/minified/TweenMax.min.js"></script>
+    <script src="~/assets/vendor/gsap/src/minified/plugins/ScrollToPlugin.min.js"></script>
 
     <!-- Popper -->
-    <script src="assets/vendor/popper.js/dist/umd/popper.min.js"></script>
+    <script src="~/assets/vendor/popper.js/dist/umd/popper.min.js"></script>
 
     <!-- Bootstrap -->
-    <script src="assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Sticky Kit -->
-    <script src="assets/vendor/sticky-kit/dist/sticky-kit.min.js"></script>
+    <script src="~/assets/vendor/sticky-kit/dist/sticky-kit.min.js"></script>
 
     <!-- Jarallax -->
-    <script src="assets/vendor/jarallax/dist/jarallax.min.js"></script>
-    <script src="assets/vendor/jarallax/dist/jarallax-video.min.js"></script>
+    <script src="~/assets/vendor/jarallax/dist/jarallax.min.js"></script>
+    <script src="~/assets/vendor/jarallax/dist/jarallax-video.min.js"></script>
 
     <!-- imagesLoaded -->
-    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="~/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
 
     <!-- Flickity -->
-    <script src="assets/vendor/flickity/dist/flickity.pkgd.min.js"></script>
+    <script src="~/assets/vendor/flickity/dist/flickity.pkgd.min.js"></script>
 
     <!-- Photoswipe -->
-    <script src="assets/vendor/photoswipe/dist/photoswipe.min.js"></script>
-    <script src="assets/vendor/photoswipe/dist/photoswipe-ui-default.min.js"></script>
+    <script src="~/assets/vendor/photoswipe/dist/photoswipe.min.js"></script>
+    <script src="~/assets/vendor/photoswipe/dist/photoswipe-ui-default.min.js"></script>
 
     <!-- Jquery Validation -->
-    <script src="assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
 
     <!-- Jquery Countdown + Moment -->
-    <script src="assets/vendor/jquery-countdown/dist/jquery.countdown.min.js"></script>
-    <script src="assets/vendor/moment/min/moment.min.js"></script>
-    <script src="assets/vendor/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
+    <script src="~/assets/vendor/jquery-countdown/dist/jquery.countdown.min.js"></script>
+    <script src="~/assets/vendor/moment/min/moment.min.js"></script>
+    <script src="~/assets/vendor/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
 
     <!-- Hammer.js -->
-    <script src="assets/vendor/hammerjs/hammer.min.js"></script>
+    <script src="~/assets/vendor/hammerjs/hammer.min.js"></script>
 
     <!-- NanoSroller -->
-    <script src="assets/vendor/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
+    <script src="~/assets/vendor/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
 
     <!-- SoundManager2 -->
-    <script src="assets/vendor/soundmanager2/script/soundmanager2-nodebug-jsmin.js"></script>
+    <script src="~/assets/vendor/soundmanager2/script/soundmanager2-nodebug-jsmin.js"></script>
 
     <!-- Seiyria Bootstrap Slider -->
-    <script src="assets/vendor/bootstrap-slider/dist/bootstrap-slider.min.js"></script>
+    <script src="~/assets/vendor/bootstrap-slider/dist/bootstrap-slider.min.js"></script>
 
     <!-- Summernote -->
-    <script src="assets/vendor/summernote/dist/summernote-bs4.min.js"></script>
+    <script src="~/assets/vendor/summernote/dist/summernote-bs4.min.js"></script>
 
     <!-- nK Share -->
-    <script src="assets/plugins/nk-share/nk-share.js"></script>
+    <script src="~/assets/plugins/nk-share/nk-share.js"></script>
 
     <!-- GoodGames -->
-    <script src="assets/js/goodgames.min.js"></script>
-    <script src="assets/js/goodgames-init.js"></script>
+    <script src="~/assets/js/goodgames.min.js"></script>
+    <script src="~/assets/js/goodgames-init.js"></script>
     <!-- END: Scripts -->
 
 
