minor changes to tf-3

--- a/FowlerSite/Views/Store/Store.cshtml
+++ b/FowlerSite/Views/Store/Store.cshtml
@@ -20,6 +20,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-grid.css">
+    <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-reboot.css">
+
     <!-- START: Styles -->
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7cOpen+Sans:400,700" rel="stylesheet" type="text/css">
@@ -56,7 +61,6 @@
     <!-- END: Styles -->
     <!-- jQuery -->
     <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
-
 
 </head>
 
