--- a/FowlerSite/Views/Home/ContactUs.cshtml
+++ b/FowlerSite/Views/Home/ContactUs.cshtml
@@ -66,11 +66,10 @@
             <div class="container">
                 <div class="nk-contacts-left">
                     <ul class="nk-social-links">
-                        <li><a class="nk-social-twitch" href="#"><span class="fab fa-twitch"></span></a></li>
-                        <li><a class="nk-social-steam" href="#"><span class="fab fa-steam"></span></a></li>
-                        <li><a class="nk-social-facebook" href="#"><span class="fab fa-facebook"></span></a></li>
-                        <li><a class="nk-social-twitter" href="#" target="_blank"><span class="fab fa-twitter"></span></a></li>
-                        <li><a class="nk-social-pinterest" href="#"><span class="fab fa-pinterest-p"></span></a></li>
+                        <li><a class="nk-social-twitch" href="https://www.twitch.tv/chippawubba"><span class="fab fa-twitch"></span></a></li>
+                        <li><a class="nk-social-steam" href="https://steamcommunity.com/profiles/76561198150082332/"><span class="fab fa-steam"></span></a></li>
+                        <li><a class="nk-social-facebook" href="https://www.facebook.com/PewDiePie/"><span class="fab fa-facebook"></span></a></li>
+                        <li><a class="nk-social-twitter" href="https://twitter.com/ClashofClans" target="_blank"><span class="fab fa-twitter"></span></a></li>
 
                         <!-- Additional Social Buttons
                             <li><a class="nk-social-behance" href="#"><span class="fab fa-behance"></span></a></li>
@@ -99,7 +98,7 @@
 
                     </ul>
                 </div>
-                
+
             </div>
         </div>
         <!-- END: Top Contacts -->
@@ -135,7 +134,7 @@
                                 </li>
                                 <li class=" nk-drop-item">
                                     <a href="forum.html">Forum</a>
-                                <ul class="dropdown">
+                                    <ul class="dropdown">
 
                                         <li>
                                             <a href="forum.html">Forum</a>
@@ -149,10 +148,7 @@
                                     </ul>
                                 </li>
                                 <li class="active">
-                                    <a href="@Url.Action("ContactUs","Home")">
-                                        Contact Us
-
-                                    </a>
+                                    <a href="@Url.Action("ContactUs","Home")">Contact Us</a>
                                 </li>
                                 <li>
                                     <a href="coming-soon.html">Coming Soon</a>
@@ -347,7 +343,15 @@
         <div class="container">
             <div class="row vertical-gap">
                 <div class="col-lg-8">
-                    <p>Welcome to *******, where we can handle all of your gaming needs!</p>
+                    <p>Welcome to GoodGames, where we can handle all of your gaming needs!</p>
+
+                    <p>
+                        Our team consists of 4 amazing developers. Those being Casey, Dominic, Anthony, and Michael. We're here to make sure
+                        that whatever it is that your after with your gaming needs, we can provide. Whether it's our blog links, or just a simple
+                        picture of games, we want to be able to provide it.
+                    </p>
+
+                    <p>By using our contact form below we will be able to provide you with any assistance to any questions or concerns you may have.</p>
                 </div>
                 <div class="col-lg-4">
                     <!--
@@ -381,43 +385,40 @@
                                         .nk-social-links-cols-3
                                         .nk-social-links-cols-2
                                 -->
-                                
+
                             </div>
                         </div>
                         <ul class="nk-social-links-3 nk-social-links-cols-4">
-                            <li><a class="nk-social-twitch" href="#"><span class="fab fa-twitch"></span></a></li>
-                            <li><a class="nk-social-instagram" href="#"><span class="fab fa-instagram"></span></a></li>
-                            <li><a class="nk-social-facebook" href="#"><span class="fab fa-facebook"></span></a></li>
-                            <li><a class="nk-social-google-plus" href="#"><span class="fab fa-google-plus"></span></a></li>
-                            <li><a class="nk-social-youtube" href="#"><span class="fab fa-youtube"></span></a></li>
-                            <li><a class="nk-social-twitter" href="#" target="_blank"><span class="fab fa-twitter"></span></a></li>
-                            <li><a class="nk-social-pinterest" href="#"><span class="fab fa-pinterest-p"></span></a></li>
+                            <li><a class="nk-social-twitch" href="https://www.twitch.tv/chippawubba"><span class="fab fa-twitch"></span></a></li>
+                            <li><a class="nk-social-facebook" href="https://www.facebook.com/PewDiePie/"><span class="fab fa-facebook"></span></a></li>
+                            <li><a class="nk-social-youtube" href="https://www.youtube.com/c/VivaLaDirtLeague"><span class="fab fa-youtube"></span></a></li>
+                            <li><a class="nk-social-twitter" href="https://twitter.com/vivadirt" target="_blank"><span class="fab fa-twitter"></span></a></li>
 
                             <!-- Additional Social Buttons
-                            <li><a class="nk-social-behance" href="#"><span class="fab fa-behance"></span></a></li>
-                            <li><a class="nk-social-bitbucket" href="#"><span class="fab fa-bitbucket"></span></a></li>
-                            <li><a class="nk-social-dropbox" href="#"><span class="fab fa-dropbox"></span></a></li>
-                            <li><a class="nk-social-dribbble" href="#"><span class="fab fa-dribbble"></span></a></li>
-                            <li><a class="nk-social-deviantart" href="#"><span class="fab fa-deviantart"></span></a></li>
-                            <li><a class="nk-social-flickr" href="#"><span class="fab fa-flickr"></span></a></li>
-                            <li><a class="nk-social-foursquare" href="#"><span class="fab fa-foursquare"></span></a></li>
-                            <li><a class="nk-social-github" href="#"><span class="fab fa-github"></span></a></li>
-                            <li><a class="nk-social-linkedin" href="#"><span class="fab fa-linkedin"></span></a></li>
-                            <li><a class="nk-social-medium" href="#"><span class="fab fa-medium"></span></a></li>
-                            <li><a class="nk-social-odnoklassniki" href="#"><span class="fab fa-odnoklassniki"></span></a></li>
-                            <li><a class="nk-social-paypal" href="#"><span class="fab fa-paypal"></span></a></li>
-                            <li><a class="nk-social-reddit" href="#"><span class="fab fa-reddit"></span></a></li>
-                            <li><a class="nk-social-skype" href="#"><span class="fab fa-skype"></span></a></li>
-                            <li><a class="nk-social-soundcloud" href="#"><span class="fab fa-soundcloud"></span></a></li>
-                            <li><a class="nk-social-steam" href="#"><span class="fab fa-steam"></span></a></li>
-                            <li><a class="nk-social-slack" href="#"><span class="fab fa-slack"></span></a></li>
-                            <li><a class="nk-social-tumblr" href="#"><span class="fab fa-tumblr"></span></a></li>
-                            <li><a class="nk-social-vimeo" href="#"><span class="fab fa-vimeo"></span></a></li>
-                            <li><a class="nk-social-vk" href="#"><span class="fab fa-vk"></span></a></li>
-                            <li><a class="nk-social-wordpress" href="#"><span class="fab fa-wordpress"></span></a></li>
-    -->
+                                                    <li><a class="nk-social-behance" href="#"><span class="fab fa-behance"></span></a></li>
+                                                    <li><a class="nk-social-bitbucket" href="#"><span class="fab fa-bitbucket"></span></a></li>
+                                                    <li><a class="nk-social-dropbox" href="#"><span class="fab fa-dropbox"></span></a></li>
+                                                    <li><a class="nk-social-dribbble" href="#"><span class="fab fa-dribbble"></span></a></li>
+                                                    <li><a class="nk-social-deviantart" href="#"><span class="fab fa-deviantart"></span></a></li>
+                                                    <li><a class="nk-social-flickr" href="#"><span class="fab fa-flickr"></span></a></li>
+                                                    <li><a class="nk-social-foursquare" href="#"><span class="fab fa-foursquare"></span></a></li>
+                                                    <li><a class="nk-social-github" href="#"><span class="fab fa-github"></span></a></li>
+                                                    <li><a class="nk-social-linkedin" href="#"><span class="fab fa-linkedin"></span></a></li>
+                                                    <li><a class="nk-social-medium" href="#"><span class="fab fa-medium"></span></a></li>
+                                                    <li><a class="nk-social-odnoklassniki" href="#"><span class="fab fa-odnoklassniki"></span></a></li>
+                                                    <li><a class="nk-social-paypal" href="#"><span class="fab fa-paypal"></span></a></li>
+                                                    <li><a class="nk-social-reddit" href="#"><span class="fab fa-reddit"></span></a></li>
+                                                    <li><a class="nk-social-skype" href="#"><span class="fab fa-skype"></span></a></li>
+                                                    <li><a class="nk-social-soundcloud" href="#"><span class="fab fa-soundcloud"></span></a></li>
+                                                    <li><a class="nk-social-steam" href="#"><span class="fab fa-steam"></span></a></li>
+                                                    <li><a class="nk-social-slack" href="#"><span class="fab fa-slack"></span></a></li>
+                                                    <li><a class="nk-social-tumblr" href="#"><span class="fab fa-tumblr"></span></a></li>
+                                                    <li><a class="nk-social-vimeo" href="#"><span class="fab fa-vimeo"></span></a></li>
+                                                    <li><a class="nk-social-vk" href="#"><span class="fab fa-vk"></span></a></li>
+                                                    <li><a class="nk-social-wordpress" href="#"><span class="fab fa-wordpress"></span></a></li>
+                            -->
                         </ul>
-                        </aside>
+                    </aside>
                     <!-- END: Sidebar -->
                 </div>
             </div>
@@ -430,7 +431,6 @@
 
         <!-- START: Footer -->
         <footer class="nk-footer">
-
             <div class="container">
                 <div class="nk-gap-3"></div>
                 <div class="row vertical-gap">
@@ -438,7 +438,7 @@
                         <div class="nk-widget">
                             <h4 class="nk-widget-title"><span class="text-main-1">Contact</span> With Us</h4>
                             <div class="nk-widget-content">
-                                <form action="php/ajax-contact-form.php" class="nk-form nk-form-ajax">
+                                <form class="nk-form nk-form-ajax">
                                     <div class="row vertical-gap sm-gap">
                                         <div class="col-md-6">
                                             <input type="email" class="form-control required" name="email" placeholder="Email *">
@@ -450,7 +450,7 @@
                                     <div class="nk-gap"></div>
                                     <textarea class="form-control required" name="message" rows="5" placeholder="Message *"></textarea>
                                     <div class="nk-gap-1"></div>
-                                    <button class="nk-btn nk-btn-rounded nk-btn-color-white">
+                                    <button class="nk-btn nk-btn-rounded nk-btn-color-white" type="submit">
                                         <span>Send</span>
                                         <span class="icon"><i class="ion-paper-airplane"></i></span>
                                     </button>
@@ -509,17 +509,8 @@
             <div class="nk-copyright">
                 <div class="container">
                     <div class="nk-copyright-left">
-                        <a target="_blank" href="https://www.templateshub.net">Templates Hub</a>
                     </div>
                     <div class="nk-copyright-right">
-                        <ul class="nk-social-links-2">
-                            <li><a class="nk-social-rss" href="#"><span class="fa fa-rss"></span></a></li>
-                            <li><a class="nk-social-twitch" href="#"><span class="fab fa-twitch"></span></a></li>
-                            <li><a class="nk-social-steam" href="#"><span class="fab fa-steam"></span></a></li>
-                            <li><a class="nk-social-facebook" href="#"><span class="fab fa-facebook"></span></a></li>
-                            <li><a class="nk-social-google-plus" href="#"><span class="fab fa-google-plus"></span></a></li>
-                            <li><a class="nk-social-twitter" href="#" target="_blank"><span class="fab fa-twitter"></span></a></li>
-                            <li><a class="nk-social-pinterest" href="#"><span class="fab fa-pinterest-p"></span></a></li>
 
                             <!-- Additional Social Buttons
                                 <li><a class="nk-social-behance" href="#"><span class="fab fa-behance"></span></a></li>
@@ -545,7 +536,6 @@
                                 <li><a class="nk-social-wordpress" href="#"><span class="fab fa-wordpress"></span></a></li>
                                 <li><a class="nk-social-youtube" href="#"><span class="fab fa-youtube"></span></a></li>
                             -->
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -700,6 +690,7 @@
     <!-- GoodGames -->
     <script src="~/assets/js/goodgames.min.js"></script>
     <script src="~/assets/js/goodgames-init.js"></script>
+    <!-- Functions -->
     <!-- END: Scripts -->
 
 
