tf-6 Fixed all the style issues with the store pages

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -353,14 +353,8 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-catalog.html">
+                                    <a asp-action="StoreCatalog">
                                         Catalog
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-catalog-alt.html">
-                                        Catalog Alt
 
                                     </a>
                                 </li>
