--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -6,9 +6,51 @@
     <title>@ViewData["Title"] - FowlerSite</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-grid.css">
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-reboot.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-grid.css">
+    <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-reboot.css">
+
+    <!-- START: Styles -->
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7cOpen+Sans:400,700" rel="stylesheet" type="text/css">
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="~/assets/vendor/bootstrap/dist/css/bootstrap.min.css">
+
+    <!-- FontAwesome -->
+    <script defer src="~/assets/vendor/fontawesome-free/js/all.js"></script>
+    <script defer src="~/assets/vendor/fontawesome-free/js/v4-shims.js"></script>
+
+    <!-- IonIcons -->
+    <link rel="stylesheet" href="~/assets/vendor/ionicons/css/ionicons.min.css">
+
+    <!-- Flickity -->
+    <link rel="stylesheet" href="~/assets/vendor/flickity/dist/flickity.min.css">
+
+    <!-- Photoswipe -->
+    <link rel="stylesheet" type="text/css" href="~/assets/vendor/photoswipe/dist/photoswipe.css">
+    <link rel="stylesheet" type="text/css" href="~/assets/vendor/photoswipe/dist/default-skin/default-skin.css">
+
+    <!-- Seiyria Bootstrap Slider -->
+    <link rel="stylesheet" href="~/assets/vendor/bootstrap-slider/dist/css/bootstrap-slider.min.css">
+
+    <!-- Summernote -->
+    <link rel="stylesheet" type="text/css" href="~/assets/vendor/summernote/dist/summernote-bs4.css">
+
+    <!-- GoodGames -->
+    <link rel="stylesheet" href="~/assets/css/goodgames.css">
+
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="~/assets/css/custom.css">
+
+    <!-- END: Styles -->
+    <!-- jQuery -->
+    <script src="~/assets/vendor/jquery/dist/jquery.min.js"></script>
+
 </head>
 <body>
     <header>
