--- a/FowlerSite/Views/Store/StoreCheckout.cshtml
+++ b/FowlerSite/Views/Store/StoreCheckout.cshtml
@@ -15,7 +15,7 @@
     <meta name="keywords" content="game, gaming, template, HTML template, responsive, Bootstrap, premium">
     <meta name="author" content="_nK">
 
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="~/assets/images/favicon.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,37 +24,37 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7cOpen+Sans:400,700" rel="stylesheet" type="text/css">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="assets/vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/assets/vendor/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- FontAwesome -->
-    <script defer src="assets/vendor/fontawesome-free/js/all.js"></script>
-    <script defer src="assets/vendor/fontawesome-free/js/v4-shims.js"></script>
+    <script defer src="~/assets/vendor/fontawesome-free/js/all.js"></script>
+    <script defer src="~/assets/vendor/fontawesome-free/js/v4-shims.js"></script>
 
     <!-- IonIcons -->
-    <link rel="stylesheet" href="assets/vendor/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="~/assets/vendor/ionicons/css/ionicons.min.css">
 
     <!-- Flickity -->
-    <link rel="stylesheet" href="assets/vendor/flickity/dist/flickity.min.css">
+    <link rel="stylesheet" href="~/assets/vendor/flickity/dist/flickity.min.css">
 
     <!-- Photoswipe -->
-    <link rel="stylesheet" type="text/css" href="assets/vendor/photoswipe/dist/photoswipe.css">
-    <link rel="stylesheet" type="text/css" href="assets/vendor/photoswipe/dist/default-skin/default-skin.css">
+    <link rel="stylesheet" type="text/css" href="~/assets/vendor/photoswipe/dist/photoswipe.css">
+    <link rel="stylesheet" type="text/css" href="~/assets/vendor/photoswipe/dist/default-skin/default-skin.css">
 
     <!-- Seiyria Bootstrap Slider -->
-    <link rel="stylesheet" href="assets/vendor/bootstrap-slider/dist/css/bootstrap-slider.min.css">
+    <link rel="stylesheet" href="~/assets/vendor/bootstrap-slider/dist/css/bootstrap-slider.min.css">
 
     <!-- Summernote -->
-    <link rel="stylesheet" type="text/css" href="assets/vendor/summernote/dist/summernote-bs4.css">
+    <link rel="stylesheet" type="text/css" href="~/assets/vendor/summernote/dist/summernote-bs4.css">
 
     <!-- GoodGames -->
-    <link rel="stylesheet" href="assets/css/goodgames.css">
+    <link rel="stylesheet" href="~/assets/css/goodgames.css">
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="~/assets/css/custom.css">
 
     <!-- END: Styles -->
     <!-- jQuery -->
-    <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="~/assets/vendor/jquery/dist/jquery.min.js"></script>
 
 
 </head>
@@ -143,7 +143,7 @@
 
                                 <div class="nk-widget-post">
                                     <a href="store-product.html" class="nk-post-image">
-                                        <img src="assets/images/product-5-xs.jpg" alt="In all revolutions of">
+                                        <img src="~/assets/images/product-5-xs.jpg" alt="In all revolutions of">
                                     </a>
                                     <h3 class="nk-post-title">
                                         <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
@@ -155,7 +155,7 @@
 
                                 <div class="nk-widget-post">
                                     <a href="store-product.html" class="nk-post-image">
-                                        <img src="assets/images/product-7-xs.jpg" alt="With what mingled joy">
+                                        <img src="~/assets/images/product-7-xs.jpg" alt="With what mingled joy">
                                     </a>
                                     <h3 class="nk-post-title">
                                         <a href="#" class="nk-cart-remove-item"><span class="ion-android-close"></span></a>
@@ -190,7 +190,7 @@
                 <div class="nk-nav-table">
 
                     <a href="index.html" class="nk-nav-logo">
-                        <img src="assets/images/logo.png" alt="GoodGames" width="199">
+                        <img src="~/assets/images/logo.png" alt="GoodGames" width="199">
                     </a>
 
                     <ul class="nk-nav nk-nav-right d-none d-lg-table-cell" data-nav-mobile="#nk-nav-mobile">
@@ -418,7 +418,7 @@
         <div class="nano">
             <div class="nano-content">
                 <a href="index.html" class="nk-nav-logo">
-                    <img src="assets/images/logo.png" alt="" width="120">
+                    <img src="~/assets/images/logo.png" alt="" width="120">
                 </a>
                 <div class="nk-navbar-mobile-content">
                     <ul class="nk-nav">
@@ -656,7 +656,7 @@
                                     <div class="col-lg-6">
                                         <div class="nk-widget-post-2">
                                             <a href="blog-article.html" class="nk-post-image">
-                                                <img src="assets/images/post-1-sm.jpg" alt="">
+                                                <img src="~/assets/images/post-1-sm.jpg" alt="">
                                             </a>
                                             <div class="nk-post-title"><a href="blog-article.html">Smell magic in the air. Or maybe barbecue</a></div>
                                             <div class="nk-post-date">
@@ -669,7 +669,7 @@
                                     <div class="col-lg-6">
                                         <div class="nk-widget-post-2">
                                             <a href="blog-article.html" class="nk-post-image">
-                                                <img src="assets/images/post-2-sm.jpg" alt="">
+                                                <img src="~/assets/images/post-2-sm.jpg" alt="">
                                             </a>
                                             <div class="nk-post-title"><a href="blog-article.html">Grab your sword and fight the Horde</a></div>
                                             <div class="nk-post-date">
@@ -747,8 +747,8 @@
 
     <!-- START: Page Background -->
 
-    <img class="nk-page-background-top" src="assets/images/bg-top-4.png" alt="">
-    <img class="nk-page-background-bottom" src="assets/images/bg-bottom.png" alt="">
+    <img class="nk-page-background-top" src="~/assets/images/bg-top-4.png" alt="">
+    <img class="nk-page-background-bottom" src="~/assets/images/bg-bottom.png" alt="">
 
     <!-- END: Page Background -->
     <!-- START: Search Modal -->
@@ -829,64 +829,64 @@
     <!-- END: Login Modal -->
     <!-- START: Scripts -->
     <!-- Object Fit Polyfill -->
-    <script src="assets/vendor/object-fit-images/dist/ofi.min.js"></script>
+    <script src="~/assets/vendor/object-fit-images/dist/ofi.min.js"></script>
 
     <!-- GSAP -->
-    <script src="assets/vendor/gsap/src/minified/TweenMax.min.js"></script>
-    <script src="assets/vendor/gsap/src/minified/plugins/ScrollToPlugin.min.js"></script>
+    <script src="~/assets/vendor/gsap/src/minified/TweenMax.min.js"></script>
+    <script src="~/assets/vendor/gsap/src/minified/plugins/ScrollToPlugin.min.js"></script>
 
     <!-- Popper -->
-    <script src="assets/vendor/popper.js/dist/umd/popper.min.js"></script>
+    <script src="~/assets/vendor/popper.js/dist/umd/popper.min.js"></script>
 
     <!-- Bootstrap -->
-    <script src="assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Sticky Kit -->
-    <script src="assets/vendor/sticky-kit/dist/sticky-kit.min.js"></script>
+    <script src="~/assets/vendor/sticky-kit/dist/sticky-kit.min.js"></script>
 
     <!-- Jarallax -->
-    <script src="assets/vendor/jarallax/dist/jarallax.min.js"></script>
-    <script src="assets/vendor/jarallax/dist/jarallax-video.min.js"></script>
+    <script src="~/assets/vendor/jarallax/dist/jarallax.min.js"></script>
+    <script src="~/assets/vendor/jarallax/dist/jarallax-video.min.js"></script>
 
     <!-- imagesLoaded -->
-    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="~/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
 
     <!-- Flickity -->
-    <script src="assets/vendor/flickity/dist/flickity.pkgd.min.js"></script>
+    <script src="~/assets/vendor/flickity/dist/flickity.pkgd.min.js"></script>
 
     <!-- Photoswipe -->
-    <script src="assets/vendor/photoswipe/dist/photoswipe.min.js"></script>
-    <script src="assets/vendor/photoswipe/dist/photoswipe-ui-default.min.js"></script>
+    <script src="~/assets/vendor/photoswipe/dist/photoswipe.min.js"></script>
+    <script src="~/assets/vendor/photoswipe/dist/photoswipe-ui-default.min.js"></script>
 
     <!-- Jquery Validation -->
-    <script src="assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
 
     <!-- Jquery Countdown + Moment -->
-    <script src="assets/vendor/jquery-countdown/dist/jquery.countdown.min.js"></script>
-    <script src="assets/vendor/moment/min/moment.min.js"></script>
-    <script src="assets/vendor/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
+    <script src="~/assets/vendor/jquery-countdown/dist/jquery.countdown.min.js"></script>
+    <script src="~/assets/vendor/moment/min/moment.min.js"></script>
+    <script src="~/assets/vendor/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
 
     <!-- Hammer.js -->
-    <script src="assets/vendor/hammerjs/hammer.min.js"></script>
+    <script src="~/assets/vendor/hammerjs/hammer.min.js"></script>
 
     <!-- NanoSroller -->
-    <script src="assets/vendor/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
+    <script src="~/assets/vendor/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
 
     <!-- SoundManager2 -->
-    <script src="assets/vendor/soundmanager2/script/soundmanager2-nodebug-jsmin.js"></script>
+    <script src="~/assets/vendor/soundmanager2/script/soundmanager2-nodebug-jsmin.js"></script>
 
     <!-- Seiyria Bootstrap Slider -->
-    <script src="assets/vendor/bootstrap-slider/dist/bootstrap-slider.min.js"></script>
+    <script src="~/assets/vendor/bootstrap-slider/dist/bootstrap-slider.min.js"></script>
 
     <!-- Summernote -->
-    <script src="assets/vendor/summernote/dist/summernote-bs4.min.js"></script>
+    <script src="~/assets/vendor/summernote/dist/summernote-bs4.min.js"></script>
 
     <!-- nK Share -->
-    <script src="assets/plugins/nk-share/nk-share.js"></script>
+    <script src="~/assets/plugins/nk-share/nk-share.js"></script>
 
     <!-- GoodGames -->
-    <script src="assets/js/goodgames.min.js"></script>
-    <script src="assets/js/goodgames-init.js"></script>
+    <script src="~/assets/js/goodgames.min.js"></script>
+    <script src="~/assets/js/goodgames-init.js"></script>
     <!-- END: Scripts -->
 
 
